samples/_failures_safe/1761540543_3a80dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff4f4e16.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_ff4f4e16.c:148:21: error: ‘const struct CompressionHeader’ has no member named ‘original’; did you mean ‘original_size’?
  148 |     if (ctx->header.original
      |                     ^~~~~~~~
      |                     original_size
./samples/SAFE/__tmp_ff4f4e16.c:148:29: error: expected ‘)’ at end of input
  148 |     if (ctx->header.original
      |        ~                    ^
      |                             )
./samples/SAFE/__tmp_ff4f4e16.c:148:5: error: expected declaration or statement at end of input
  148 |     if (ctx->header.original
      |     ^~
